Run 2 branches concurently.
