# server/api/services/types/repo-config.ts
@@ -1,3 +1,10 @@
+export interface IRepoDiff {
+  projectId: number,
+  user: string,
+  repo: string,
+  baseBranch: string,
+  diffBranch: string,
+}
 export interface IRepoConfig {
   projectId: number,
   user: string,
